src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Process_QA_Is_1B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process QA Is 1B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>产品类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>SY</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>MV-C</fullName>
                </value>
                <value>
                    <fullName>MV-P</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>3C</fullName>
                </value>
                <value>
                    <fullName>1Y</fullName>
                </value>
                <value>
                    <fullName>LI</fullName>
                </value>
                <value>
                    <fullName>LL</fullName>
                </value>
                <value>
                    <fullName>7A</fullName>
                </value>
                <value>
                    <fullName>LJ</fullName>
                </value>
                <value>
                    <fullName>LK</fullName>
                </value>
                <value>
                    <fullName>6H</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>LHN</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
                <value>
                    <fullName>4Q</fullName>
                </value>
                <value>
                    <fullName>MV-S</fullName>
                </value>
                <value>
                    <fullName>CHZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Province Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>City__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Province_RT</value>
            </filterItems>
            <infoMessage>请选择省份</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>工作订单</relationshipLabel>
        <relationshipName>WorkOrderToProvince</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chongqing</fullName>
                </value>
                <value>
                    <fullName>Fujian</fullName>
                </value>
                <value>
                    <fullName>Gansu</fullName>
                </value>
                <value>
                    <fullName>Guangdong</fullName>
                </value>
                <value>
                    <fullName>Guangxi</fullName>
                </value>
                <value>
                    <fullName>Guizhou</fullName>
                </value>
                <value>
                    <fullName>Hainan</fullName>
                </value>
                <value>
                    <fullName>Hebei</fullName>
                </value>
                <value>
                    <fullName>Heilongjiang</fullName>
                </value>
                <value>
                    <fullName>Henan</fullName>
                </value>
                <value>
                    <fullName>Hongkong</fullName>
                </value>
                <value>
                    <fullName>Hubei</fullName>
                </value>
                <value>
                    <fullName>Hunan</fullName>
                </value>
                <value>
                    <fullName>Jiangsu</fullName>
                </value>
                <value>
                    <fullName>Jiangxi</fullName>
                </value>
                <value>
                    <fullName>Jilin</fullName>
                </value>
                <value>
                    <fullName>Liaoning</fullName>
                </value>
                <value>
                    <fullName>Macao</fullName>
                </value>
                <value>
                    <fullName>Neimenggu</fullName>
                </value>
                <value>
                    <fullName>Ningxia</fullName>
                </value>
                <value>
                    <fullName>Qinghai</fullName>
                </value>
                <value>
                    <fullName>Shaanxi</fullName>
                </value>
                <value>
                    <fullName>Shandong</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>shanxi</fullName>
                </value>
                <value>
                    <fullName>shenzhen</fullName>
                </value>
                <value>
                    <fullName>Sichuan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_name__c</fullName>
        <label>Queue name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCE_L2_MANAGER__c</fullName>
        <label>L2 RC MANAGER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCE_L2_WORKGROUP__c</fullName>
        <label>L2 RC WORKGROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCE_L2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L2 RC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WoToRceL2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RCE_TAT_Missed__c</fullName>
        <formula>if(AND(SLA_Type__c != null,RC_TAT_Missed_By_Mins__c &gt; 0), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCE TAT Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCE_USER_WORKGROUP__c</fullName>
        <label>RCE USER WORKGROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_TAT_Mins__c</fullName>
        <formula>if(isNull(CSC_REPORT_RCE_USER_Dt__c),
(Now()- Case.CreatedDate)*24*60
,(CSC_REPORT_RCE_USER_Dt__c- Case.CreatedDate)*24*60)</formula>
        <label>RC TAT Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_TAT_Missed_By_Mins__c</fullName>
        <formula>RC_TAT_Mins__c- Case.Rc_SLA_Target_Mins_With_1B__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RC TAT Missed By Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RackName__c</fullName>
        <description>TC 机架</description>
        <label>RackName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rc_SLA_Target_Mins_With_1B__c</fullName>
        <formula>if(Process_QA_Is_1B__c==true,
CASE(SLA_Type__c, 
&apos;CTR&apos;, 30,
&apos;SBD&apos;, 60,
&apos;NBD&apos;, 120,
0)+24*60,
CASE(SLA_Type__c, 
&apos;CTR&apos;, 30,
&apos;SBD&apos;, 60,
&apos;NBD&apos;, 120,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rc SLA Target Mins With 1B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Changes__c</fullName>
        <label>Recent Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Delay_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ref Delay Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Ref_Value__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subcase Delay Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>Work Orders (Subcase Delay Code)</relationshipLabel>
        <relationshipName>Work_Orders_Delay_Code_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ref_Resolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder Resolution</label>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>Work Orders (Subcase Resolution)</relationshipLabel>
        <relationshipName>Work_Orders_Resolution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ref_Workorder_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ref_Value__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Work Order Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>Work Orders (Workorder Type)</relationshipLabel>
        <relationshipName>Work_Orders_Work_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepairClassCD__c</fullName>
        <label>RepairClassCD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Level__c</fullName>
        <label>维修级别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NBD</fullName>
                </value>
                <value>
                    <fullName>SBD</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
                <value>
                    <fullName>5*13*4</fullName>
                </value>
                <value>
                    <fullName>5*9*4</fullName>
                </value>
                <value>
                    <fullName>7*24*2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestDT_to_Today__c</fullName>
        <formula>TODAY() -  DATEVALUE(Requested_Date__c )</formula>
        <label>RequestDT to Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Guaranteed_Date__c</fullName>
        <label>Requested Guaranteed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Workorder Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolution_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parts Shipped</fullName>
                </value>
                <value>
                    <fullName>SBD Counrier Assist</fullName>
                </value>
                <value>
                    <fullName>Onsite Repair</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>IRS and 3Par STaTS False Alarm</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>6XX End Call</fullName>
                </value>
                <value>
                    <fullName>Not Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Sub_Code__c</fullName>
        <label>Workorder Resolution Sub-Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolution_Code__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer self-solved without HPE assistance</fullName>
                </value>
                <value>
                    <fullName>Firmware/BIOS/Driver updates(except 3Par)</fullName>
                </value>
                <value>
                    <fullName>HW Issue</fullName>
                </value>
                <value>
                    <fullName>Implementation/Configuration/Setup questions</fullName>
                </value>
                <value>
                    <fullName>Non-Technical/Presales/Contract Coverage</fullName>
                </value>
                <value>
                    <fullName>SW Issue</fullName>
                </value>
                <value>
                    <fullName>Duplicate case logged</fullName>
                </value>
                <value>
                    <fullName>Test Case</fullName>
                </value>
                <value>
                    <fullName>Failed RPL</fullName>
                </value>
                <value>
                    <fullName>Unable to reach customer to begin diagnosis</fullName>
                </value>
                <value>
                    <fullName>Customer unwilling/Unable to perform remote diagnosis and/or implement action plan</fullName>
                </value>
                <value>
                    <fullName>Transferred out of HP EG</fullName>
                </value>
                <value>
                    <fullName>Customer declined billable service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Workorder Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Remote Other</fullName>
                </value>
                <value>
                    <fullName>Remote Resolve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revisit_Leave_Date__c</fullName>
        <label>Revisit Leave Date</label>
        <summarizedField>CE_Revisit__c.Leave_Date__c</summarizedField>
        <summaryForeignKey>CE_Revisit__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revisit_Repair_Date__c</fullName>
        <label>Revisit Repair Date</label>
        <summarizedField>CE_Revisit__c.Repair_Date__c</summarizedField>
        <summaryForeignKey>CE_Revisit__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SIE_ID__c</fullName>
        <description>Only for RCE L2,关单时需要验证，验证失败不允许关闭工单</description>
        <label>SIE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <label>SLA Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Content__c</fullName>
        <label>SMS Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_SMS_Date__c</fullName>
        <formula>LastModifiedDate + 5/(24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send SMS Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <description>elevation flow, use it to identity this work order service Level to send to hpe</description>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Mission Critical</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_Category__c</fullName>
        <label>Skill Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BCS Server</fullName>
                </value>
                <value>
                    <fullName>ISS Blade</fullName>
                </value>
                <value>
                    <fullName>ISS Converged System</fullName>
                </value>
                <value>
                    <fullName>ISS High Density&amp;Computing Server</fullName>
                </value>
                <value>
                    <fullName>ISS Rack Server</fullName>
                </value>
                <value>
                    <fullName>ISS server</fullName>
                </value>
                <value>
                    <fullName>MultiVendor</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Operating system</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Software &amp; Solutions</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Skill_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>[Expire]Old Compaq brand storage</fullName>
                </value>
                <value>
                    <fullName>[Expire]Old HP brand storage</fullName>
                </value>
                <value>
                    <fullName>[Expire]SAN Switches - 8G</fullName>
                </value>
                <value>
                    <fullName>3PAR SS10000/20000/CF20000</fullName>
                </value>
                <value>
                    <fullName>3PAR SS7000/8000/H3C CF8xxx</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Adaptive Optimization</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Dynamic Optimization</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-File Persona</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Peer Motion</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Peer Persistence</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Performance Tunning</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Priority Optimization</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Remote Copy</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-RM for Exchange</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-RM for Hyper-V</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-RM for oracle</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-RM for SQL</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-RM for VMware</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-System Reporter</fullName>
                </value>
                <value>
                    <fullName>3PAR SW-Virtual Copy</fullName>
                </value>
                <value>
                    <fullName>3PAR V/T/F series</fullName>
                </value>
                <value>
                    <fullName>AiO</fullName>
                </value>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Alpha servers - Highend</fullName>
                </value>
                <value>
                    <fullName>Alpha servers - middle-end and entry level</fullName>
                </value>
                <value>
                    <fullName>Apollo 6000/4500/2000</fullName>
                </value>
                <value>
                    <fullName>Avaya/Notel</fullName>
                </value>
                <value>
                    <fullName>Backup Review</fullName>
                </value>
                <value>
                    <fullName>Blade - IA32</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>ProfileSkill</referenceTo>
        <relationshipLabel>工作订单</relationshipLabel>
        <relationshipName>WorkOrderToSkill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_IsNull_Count__c</fullName>
        <label>Status IsNull Count</label>
        <summarizedField>Order__c.Status_IsNull_Count__c</summarizedField>
        <summaryForeignKey>Order__c.Work_Order_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subcase_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subcase_Delivery_Alternative__c</fullName>
        <label>WorkOrder Delivery Alternative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>900</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcase_Duration__c</fullName>
        <formula>Subcase_Onsite_Fixed_Date__c - Subcase_Onsite_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WorkOrder Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcase_Employee_Closer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder Employee Closer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SUBCASE_USER_CLOSER</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcase_Enroute_Date__c</fullName>
        <label>WorkOrder Enroute Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subcase_Enroute_Location__c</fullName>
        <description>出发的地点信息</description>
        <label>WorkOrder Enroute Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subcase_Estimated_Task_Duration__c</fullName>
        <label>WorkOrder Estimated Task Duration</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcase_Fix_Location__c</fullName>
        <description>进展修复的地点信息</description>
        <label>WorkOrder Fix Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subcase_Leave_Location__c</fullName>
        <description>进展离开的地点信息</description>
        <label>WorkOrder Leave Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subcase_Onsite_Fixed_Date__c</fullName>
        <label>WorkOrder Onsite Repair Fixed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subcase_Onsite_Start_Date__c</fullName>
        <label>WorkOrder Onsite Repair Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subcase_Onsite_Stop_Date__c</fullName>
        <label>WorkOrder Onsite Repair Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subcase_Repair_Class_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder Repair Class Code RCC</label>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>工作订单</relationshipLabel>
        <relationshipName>WorkOrderToRepairClass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcase_Service_Category__c</fullName>
        <formula>TEXT(Subcase_Repair_Class_Code__r.Srvc_Cat__c)</formula>
        <label>WorkOrder Service Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcase_Start_Location__c</fullName>
        <description>进展开始地点信息</description>
        <label>WorkOrder Start Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subcase_Travel_Time__c</fullName>
        <description>Subcase_Onsite_Start_Date__c - Subcase_Enroute_Date__c</description>
        <formula>(Subcase_Onsite_Start_Date__c - Subcase_Enroute_Date__c)*24</formula>
        <label>WorkOrder Travel Time</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_of_Work__c</fullName>
        <label>Summary of Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SvrShelfTime__c</fullName>
        <description>TC 服务器上架时间</description>
        <label>SvrShelfTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalLabourTime__c</fullName>
        <label>TotalLabourTime</label>
        <summarizedField>CE_Revisit__c.LabourTime__c</summarizedField>
        <summaryForeignKey>CE_Revisit__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revisit_DAH_Report__c</fullName>
        <formula>Total_Revisit_DAH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revisit DAH - Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revisit_DAH__c</fullName>
        <label>Total Revisit DAH</label>
        <summarizedField>CE_Revisit__c.CSC_Report_Revisit_DAH__c</summarizedField>
        <summaryForeignKey>CE_Revisit__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revisit_DLH_Report2__c</fullName>
        <formula>Total_Revisit_Travel_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revisit Travel Time - Report</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revisit_DLH_Report__c</fullName>
        <formula>Total_Revisit_DLH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revisit DLH - Report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revisit_DLH__c</fullName>
        <label>Total Revisit DLH</label>
        <summarizedField>CE_Revisit__c.CSC_Report_Revisit_DLH__c</summarizedField>
        <summaryForeignKey>CE_Revisit__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revisit_Travel_Time__c</fullName>
        <label>Total Revisit Travel Time</label>
        <summarizedField>CE_Revisit__c.CSC_Report_Revisit_Travel_Time__c</summarizedField>
        <summaryForeignKey>CE_Revisit__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Travel_Zone__c</fullName>
        <label>Travel Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UWorkNo__c</fullName>
        <label>UWorkNo</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valuable_Customer__c</fullName>
        <formula>Case.Valuable_Customer__c</formula>
        <label>Valuable Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerificationRemarks__c</fullName>
        <label>Verification/Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WH_CHN__c</fullName>
        <label>WH-CHN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WO_18_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Name__c</fullName>
        <externalId>true</externalId>
        <label>Work Order Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Workorder_duration__c</fullName>
        <formula>IF( ISNULL(Subcase_Close_Date__c), NOW() - CreatedDate ,  Subcase_Close_Date__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workorder(duration)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X_Failure_Code_72_Count__c</fullName>
        <label>X Failure Code 72 Count</label>
        <summarizedField>Order__c.X_Failure_Code_72_Count__c</summarizedField>
        <summaryForeignKey>Order__c.Work_Order_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>